[gd_scene load_steps=21 format=3 uid="uid://cn0mt73uxjtkd"]

[ext_resource type="Script" path="res://allies/jobless/jobless.gd" id="1_fpgk2"]
[ext_resource type="Texture2D" uid="uid://vw8cfdh1qyq3" path="res://game assets test/custom/entities/humans/jobless/jobless_run.png" id="2_4eyut"]
[ext_resource type="Script" path="res://components/character_components/animation_component.gd" id="3_aro2m"]
[ext_resource type="Texture2D" uid="uid://bu8d4cu72n1pt" path="res://game assets test/custom/entities/humans/jobless/jobless_idle.png" id="4_rj375"]
[ext_resource type="PackedScene" uid="uid://bci8dwt4iycg0" path="res://components/character_components/velocity_component.tscn" id="5_o175n"]
[ext_resource type="PackedScene" uid="uid://bo3jadkrsersr" path="res://components/character_components/enemy_detection_component.tscn" id="6_kftw5"]
[ext_resource type="Script" path="res://allies/jobless/ToolDetectionComponent.gd" id="7_v75nu"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5e7rk"]
height = 42.0

[sub_resource type="Animation" id="Animation_e6wf3"]
resource_name = "Idle"
length = 0.6
loop_mode = 1
step = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_rj375")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_saptc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_qdguj"]
resource_name = "Walk"
length = 0.3
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_4eyut")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wuetl"]
_data = {
"Idle": SubResource("Animation_e6wf3"),
"RESET": SubResource("Animation_saptc"),
"Walk": SubResource("Animation_qdguj")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ffye2"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8tn0d"]
animation = &"Walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ywgrc"]
animation = &"Walk"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_aniad"]
blend_point_0/node = SubResource("AnimationNodeAnimation_ffye2")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_8tn0d")
blend_point_1/pos = 1.0
blend_point_2/node = SubResource("AnimationNodeAnimation_ywgrc")
blend_point_2/pos = -1.0
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sbotl"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_mg74d"]
states/Move/node = SubResource("AnimationNodeBlendSpace1D_aniad")
states/Move/position = Vector2(367, 73)
transitions = ["Start", "Move", SubResource("AnimationNodeStateMachineTransition_sbotl")]

[sub_resource type="CircleShape2D" id="CircleShape2D_yaqb4"]
radius = 600.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ro0xl"]
radius = 880.668

[node name="jobless" type="CharacterBody2D" groups=["jobless"]]
scale = Vector2(0.7, 0.7)
collision_layer = 8
script = ExtResource("1_fpgk2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 1)
shape = SubResource("CapsuleShape2D_5e7rk")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.23, 0.23)
texture = ExtResource("4_rj375")
hframes = 2

[node name="AnimationComponent" type="Node2D" parent="." node_paths=PackedStringArray("sprite", "animation_player", "animation_tree")]
script = ExtResource("3_aro2m")
sprite = NodePath("../Sprite2D")
animation_player = NodePath("AnimationPlayer")
animation_tree = NodePath("AnimationTree")

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimationComponent"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_wuetl")
}

[node name="AnimationTree" type="AnimationTree" parent="AnimationComponent"]
tree_root = SubResource("AnimationNodeStateMachine_mg74d")
anim_player = NodePath("../AnimationPlayer")
parameters/Move/blend_position = 0

[node name="VelocityComponent" parent="." instance=ExtResource("5_o175n")]
max_speed = 50.0

[node name="EnemyDetectionComponent" parent="." node_paths=PackedStringArray("detection_area") instance=ExtResource("6_kftw5")]
detection_area = NodePath("EnemyDetection")

[node name="EnemyDetection" type="Area2D" parent="EnemyDetectionComponent"]
visible = false
collision_layer = 0
collision_mask = 68

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionComponent/EnemyDetection"]
shape = SubResource("CircleShape2D_yaqb4")

[node name="IdleTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 2.0
one_shot = true

[node name="ToolDetectionComponent" type="Node2D" parent="."]
script = ExtResource("7_v75nu")

[node name="ToolDetection" type="Area2D" parent="ToolDetectionComponent"]
visible = false
collision_layer = 128
collision_mask = 144

[node name="CollisionShape2D" type="CollisionShape2D" parent="ToolDetectionComponent/ToolDetection"]
shape = SubResource("CircleShape2D_ro0xl")

[connection signal="animation_finished" from="AnimationComponent/AnimationTree" to="AnimationComponent" method="_on_animation_tree_animation_finished"]
[connection signal="body_entered" from="EnemyDetectionComponent/EnemyDetection" to="EnemyDetectionComponent" method="_on_enemy_detection_body_entered"]
[connection signal="body_exited" from="EnemyDetectionComponent/EnemyDetection" to="EnemyDetectionComponent" method="_on_enemy_detection_body_exited"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]
[connection signal="body_entered" from="ToolDetectionComponent/ToolDetection" to="ToolDetectionComponent" method="_on_tool_detection_body_entered"]
[connection signal="body_exited" from="ToolDetectionComponent/ToolDetection" to="ToolDetectionComponent" method="_on_tool_detection_body_exited"]
